@@ -25,3 +25,4 @@
 ( cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/fancy_viewer.c;  ) > 0.9.7cvs7.patchset
 ( cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/fancy_viewer.c;  ) > 0.9.7cvs8.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/fancy_prefs.h;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/fancy_prefs.c;  cvs diff -u -r 1.1.2.18 -r 1.1.2.19 src/fancy_viewer.c;  ) > 0.9.7cvs9.patchset
+( cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/fancy_viewer.c;  ) > 0.9.7cvs10.patchset
